// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should output the correct duration 1`] = `
"● Compiling...
✔ Compilation succeeded (0ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

● Compiling...
✔ Compilation succeeded (200ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

"
`;

exports[`should render the correct output on failure 1`] = `
"● Compiling...
✖ Compilation failed

    Error message
    - file1.js:1 method1
        /path/to/file1.js:1:0
      - file2.js:1 method2
        /path/to/file2.js:1:0

"
`;

exports[`should render the correct output on success 1`] = `
"● Compiling...
✔ Compilation succeeded (0ms)

     CLIENT                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    foo.js   10Kb

     SERVER                             
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Asset    Size
    bar.js   10Kb

"
`;
